Add switch state endpoint
